Fixes alignment in icon list
Closes #244

--- a/themes/roots-nextdatagov/assets/less/app.less
+++ b/themes/roots-nextdatagov/assets/less/app.less
@@ -199,6 +199,7 @@ border-bottom : 1px solid #D1E2ED;
          li {
              list-style-type: none;
              display : inline-block;
+             vertical-align: top;
 
              a {                 
                  display: inline-block;
